welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
def estPositionFinale() : Boolean = {
^SnakeBuggle:1: error: expected class or object definition
def estPositionFinale() : Boolean = {
^