welcome.lessons.welcome.traversal.Snake.scala.code
def estPositionFinale() : Boolean = {
  var res : Boolean = false
  if (estFaceMur() && getDirection() == Direction.EST) {
    gauche();
    if (estFaceMur()) {
      res = true;
    }
  } else if (estFaceMur() && getDirection() == Direction.OUEST) {
    droite();
    if (estFaceMur()) {
      res = true;
  }
  return res;
}
    
def pasDeSerpent() {
  if (!estFaceMur()) {
    avance();
  } else {
    if (getDirection() == Direction.OUEST) {
      droite();
      avance();
      droite();
    } else if (getDirection() == Direction.EST) {
      gauche();
      avance();
      gauche();
    }
  }
}

override def run() {
  baisseBrosse();
  while (!estPositionFinale()) {
    pasDeSerpent();
  }
}